<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.java.android.laboratorio07.PrincipalActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/editText2"
        android:hint="@string/dica_cidade" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/spinner"
        android:entries="@array/lista_ufs"/>

    <TextView
        android:text="@string/label_operacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/label_tipoOperacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:id="@+id/operacaoTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/label_estilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/operacaoTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:text="@string/label_tipoMoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/estiloTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/estiloTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/vlrMinimoLinearLayout">

        <TextView
            android:text="@string/lavel_valorMinimo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valorMinimoTextView"
            android:layout_weight="1" />
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vlrMinimoLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/valorMinimoSeekBar"
        android:max="1000"
        android:progress="600" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valorMinimoSeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:id="@+id/vlrMaximoLinearLayout">

        <TextView
            android:text="@string/label_valorMaximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valorMaximoTextView"
            android:layout_weight="1" />
    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vlrMaximoLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:id="@+id/valorMaximoSeekBar"
        android:max="15000"
        android:progress="500" />

</RelativeLayout>
